--- a/1Trabalho/MapperReflect/MapperReflect.csproj
+++ b/1Trabalho/MapperReflect/MapperReflect.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IMapper.cs" />
     <Compile Include="Mapper.cs" />
     <Compile Include="AutoMapper.cs" />
+    <Compile Include="Mapping.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
