--- a/Assert/Assert.csproj
+++ b/Assert/Assert.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MapperReflect\MapperReflect.csproj">
+      <Project>{909b939d-bb76-4d62-a83d-874d5a4f36c5}</Project>
+      <Name>MapperReflect</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
