--- a/1Trabalho/MapperReflect/MapperReflect.csproj
+++ b/1Trabalho/MapperReflect/MapperReflect.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{909B939D-BB76-4D62-A83D-874D5A4F36C5}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MapperReflect</RootNamespace>
     <AssemblyName>MapperReflect</AssemblyName>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Cache.cs" />
+    <Compile Include="Course.cs" />
     <Compile Include="IMapper.cs" />
     <Compile Include="Mapper.cs" />
     <Compile Include="AutoMapper.cs" />
@@ -51,9 +56,12 @@
     <Compile Include="MappingFields.cs" />
     <Compile Include="MappingProperties.cs" />
     <Compile Include="MappingToMap.cs" />
+    <Compile Include="Organization.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="School.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="Subject.cs" />
     <Compile Include="Teacher.cs" />
   </ItemGroup>
   <ItemGroup>
