Correct MappingProperties and MappingFields.

--- a/1Trabalho/MapperReflect/MapperReflect.csproj
+++ b/1Trabalho/MapperReflect/MapperReflect.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{909B939D-BB76-4D62-A83D-874D5A4F36C5}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MapperReflect</RootNamespace>
     <AssemblyName>MapperReflect</AssemblyName>
