--- a/1Trabalho/MapperReflect/MapperReflect.csproj
+++ b/1Trabalho/MapperReflect/MapperReflect.csproj
@@ -47,22 +47,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
-    <Compile Include="Cache.cs" />
-    <Compile Include="Course.cs" />
-    <Compile Include="IMapper.cs" />
-    <Compile Include="Mapper.cs" />
-    <Compile Include="AutoMapper.cs" />
-    <Compile Include="Mapping.cs" />
-    <Compile Include="MappingFields.cs" />
-    <Compile Include="MappingProperties.cs" />
-    <Compile Include="MappingToMap.cs" />
-    <Compile Include="Organization.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Cache\Cache.cs" />
+    <Compile Include="Types\Course.cs" />
+    <Compile Include="Map\IMapper.cs" />
+    <Compile Include="Map\Mapper.cs" />
+    <Compile Include="Map\AutoMapper.cs" />
+    <Compile Include="Map\Mapping.cs" />
+    <Compile Include="Map\MappingFields.cs" />
+    <Compile Include="Map\MappingProperties.cs" />
+    <Compile Include="Map\MappingToMap.cs" />
+    <Compile Include="Types\Organization.cs" />
+    <Compile Include="Types\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="School.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="Subject.cs" />
-    <Compile Include="Teacher.cs" />
+    <Compile Include="Types\School.cs" />
+    <Compile Include="Types\Student.cs" />
+    <Compile Include="Types\Subject.cs" />
+    <Compile Include="Types\Teacher.cs" />
+    <Compile Include="Types\ToMapAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
