--- a/1Trabalho/MapperEmit/MapperEmit.csproj
+++ b/1Trabalho/MapperEmit/MapperEmit.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cache\Cache.cs" />
-    <Compile Include="Emitter\Emitter.cs" />
+    <Compile Include="Emitter\AutoMapperEmitter.cs" />
     <Compile Include="Emitter\FieldEmitter.cs" />
     <Compile Include="Emitter\PropertiesEmitter.cs" />
     <Compile Include="Map\AutoMapper.cs" />
