--- a/1Trabalho/MapperEmit/MapperEmit.csproj
+++ b/1Trabalho/MapperEmit/MapperEmit.csproj
@@ -44,16 +44,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cache\Cache.cs" />
-    <Compile Include="Emiter\Emitter.cs" />
+    <Compile Include="Emiter\IEmitter.cs" />
     <Compile Include="Map\AutoMapperEmitter.cs" />
     <Compile Include="Emiter\FieldEmitter.cs" />
     <Compile Include="Emiter\PropertiesEmitter.cs" />
     <Compile Include="Map\IMapper.cs" />
     <Compile Include="Map\Mapper.cs" />
-    <Compile Include="Map\Mapping.cs" />
-    <Compile Include="Map\MappingEmit.cs" />
-    <Compile Include="Map\MappingFields.cs" />
-    <Compile Include="Map\MappingProperties.cs" />
+    <Compile Include="Mapping\Mapping.cs" />
+    <Compile Include="Emiter\MappingEmit.cs" />
+    <Compile Include="Mapping\MappingFields.cs" />
+    <Compile Include="Mapping\MappingProperties.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Course.cs" />
