--- a/1Trabalho/TestEmit/TestEmit.csproj
+++ b/1Trabalho/TestEmit/TestEmit.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F396D9F8-4923-4ABF-B77C-8A8506426EBF}</ProjectGuid>
+    <ProjectGuid>{7F270AE7-B12E-4C24-93F1-4A2B870F7D8B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tests</RootNamespace>
-    <AssemblyName>Tests</AssemblyName>
+    <RootNamespace>TestEmit</RootNamespace>
+    <AssemblyName>TestEmit</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -34,9 +34,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
@@ -48,20 +45,18 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
-          <Private>False</Private>
-        </Reference>
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTestReflect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestEmit.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MapperReflect\MapperReflect.csproj">
-      <Project>{909b939d-bb76-4d62-a83d-874d5a4f36c5}</Project>
-      <Name>MapperReflect</Name>
+    <ProjectReference Include="..\MapperEmit\MapperEmit.csproj">
+      <Project>{cd26683e-80ca-4e2c-8b3d-1ac014cb6a55}</Project>
+      <Name>MapperEmit</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
