--- a/1Trabalho/MapperEmit/MapperEmit.csproj
+++ b/1Trabalho/MapperEmit/MapperEmit.csproj
@@ -44,8 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cache\Cache.cs" />
-    <Compile Include="Emiter\IEmitter.cs" />
-    <Compile Include="Map\AutoMapperEmitter.cs" />
+    <Compile Include="Emiter\Emitter.cs" />
+    <Compile Include="Map\AutoMapper.cs" />
     <Compile Include="Emiter\FieldEmitter.cs" />
     <Compile Include="Emiter\PropertiesEmitter.cs" />
     <Compile Include="Map\IMapper.cs" />
@@ -55,7 +55,6 @@
     <Compile Include="Mapping\MappingFields.cs" />
     <Compile Include="Mapping\MappingProperties.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Course.cs" />
     <Compile Include="Types\Organization.cs" />
     <Compile Include="Types\Person.cs" />
@@ -68,7 +67,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
