--- a/1Trabalho/MapperGeneric/MapperGeneric.csproj
+++ b/1Trabalho/MapperGeneric/MapperGeneric.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CD26683E-80CA-4E2C-8B3D-1AC014CB6A55}</ProjectGuid>
+    <ProjectGuid>{20640800-5DAC-47B2-B407-62F2016DA218}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MapperEmit</RootNamespace>
-    <AssemblyName>MapperEmit</AssemblyName>
+    <RootNamespace>MapperGeneric</RootNamespace>
+    <AssemblyName>MapperGeneric</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,16 +47,18 @@
     <Compile Include="Emiter\ConstructorEmit.cs" />
     <Compile Include="Emiter\ConstructorEmitter.cs" />
     <Compile Include="Emiter\Emitter.cs" />
-    <Compile Include="Map\AutoMapper.cs" />
     <Compile Include="Emiter\FieldEmitter.cs" />
-    <Compile Include="Emiter\PropertiesEmitter.cs" />
-    <Compile Include="Map\IMapper.cs" />
-    <Compile Include="Map\Mapper.cs" />
-    <Compile Include="Mapping\Mapping.cs" />
     <Compile Include="Emiter\MappingEmit.cs" />
+    <Compile Include="Emiter\PropertiesEmitter.cs" />
+    <Compile Include="Mapping\Mapping.cs" />
     <Compile Include="Mapping\MappingFields.cs" />
     <Compile Include="Mapping\MappingProperties.cs" />
+    <Compile Include="Map\AutoMapper.cs" />
+    <Compile Include="Map\IMapper.cs" />
+    <Compile Include="Map\IMapperGeneric.cs" />
+    <Compile Include="Map\Mapper.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Course.cs" />
     <Compile Include="Types\Organization.cs" />
     <Compile Include="Types\Person.cs" />
@@ -68,9 +70,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
